--- a/index.html
+++ b/index.html
@@ -45,27 +45,47 @@
         />
       </div>
       <div class="todo__list">
-        <div class="item">
-          <div class="item__checkbox"></div>
-          <p class="item__text">Jog around the park 3x</p>
+        <div class="item item--done">
+          <div class="item__checkbox item__checkbox--done"></div>
+          <p class="item__text item__text--done">Jog around the park 3x</p>
+          <img
+            src="./images/icon-cross.svg"
+            alt="cross icon"
+            class="item__delete"
+          />
         </div>
         <div class="item">
           <div class="item__checkbox"></div>
           <p class="item__text">Complete online JavaScript course</p>
+          <img
+            src="./images/icon-cross.svg"
+            alt="cross icon"
+            class="item__delete"
+          />
         </div>
         <div class="item">
           <div class="item__checkbox"></div>
           <p class="item__text">Read for 1 hour</p>
+          <img
+            src="./images/icon-cross.svg"
+            alt="cross icon"
+            class="item__delete"
+          />
         </div>
         <div class="item">
           <div class="item__checkbox"></div>
           <p class="item__text">Pick up groceries</p>
+          <img
+            src="./images/icon-cross.svg"
+            alt="cross icon"
+            class="item__delete"
+          />
         </div>
       </div>
       <div class="controls">
         <div class="controls__items-left">5 items left</div>
         <div class="controls__selectors">
-          <span class="selector__all">All</span>
+          <span class="selector__all selector--current">All</span>
           <span class="selector__active">Active</span>
           <span class="selector__completed">Completed</span>
         </div>
