--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <title>Frontend Mentor | Todo app</title>
   </head>
-  <body class="theme--light">
+  <body class="theme--dark">
     <div class="container">
       <header class="header">
         <h1 class="header__logo">Todo</h1>
@@ -45,7 +45,7 @@
         />
       </div>
       <div class="todo__list">
-        <div class="item item--done">
+        <div class="item item--done draggable">
           <div class="item__checkbox item__checkbox--done"></div>
           <p class="item__text item__text--done">Jog around the park 3x</p>
           <img
@@ -54,7 +54,7 @@
             class="item__delete"
           />
         </div>
-        <div class="item">
+        <div class="item draggable">
           <div class="item__checkbox"></div>
           <p class="item__text">Complete online JavaScript course</p>
           <img
@@ -63,7 +63,7 @@
             class="item__delete"
           />
         </div>
-        <div class="item">
+        <div class="item draggable">
           <div class="item__checkbox"></div>
           <p class="item__text">Read for 1 hour</p>
           <img
@@ -72,7 +72,7 @@
             class="item__delete"
           />
         </div>
-        <div class="item">
+        <div class="item draggable">
           <div class="item__checkbox"></div>
           <p class="item__text">Pick up groceries</p>
           <img
